compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__int_literals_redundant_comparison_8.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 4129
expression: "pub fn main() { 1 >= 2 }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { 1 >= 2 }

----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:1:17
  │
1 │ pub fn main() { 1 >= 2 }
  │                 ^^^^^^ This is always `False`

This comparison is redundant since it always fails.
