compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__int_minus_in_guards_requires_v1_3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2405
expression: "\npub fn main() {\n  case Nil {\n    _ if 1 - 1 == 0 -> Nil\n    _ -> Nil\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  case Nil {
    _ if 1 - 1 == 0 -> Nil
    _ -> Nil
  }
}


----- WARNING
warning: Incompatible gleam version range
  ┌─ /src/warning/wrn.gleam:4:10
  │
4 │     _ if 1 - 1 == 0 -> Nil
  │          ^^^^^ This requires a Gleam version >= 1.3.0

Arithmetic operations in guards were introduced in version v1.3.0. But the
Gleam version range specified in your `gleam.toml` would allow this code to
run on an earlier version like v1.0.0, resulting in compilation errors!
Hint: Remove the version constraint from your `gleam.toml` or update it to be:

    gleam = ">= 1.3.0"
