compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__internal_annotation_on_function_requires_v1_1.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2340
expression: "\n@internal\npub fn wibble() { Nil }\n"
snapshot_kind: text
---
----- SOURCE CODE

@internal
pub fn wibble() { Nil }


----- WARNING
warning: Incompatible gleam version range
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ @internal
  │ ^^^^^^^^^ This requires a Gleam version >= 1.1.0

The `@internal` annotation was introduced in version v1.1.0. But the Gleam
version range specified in your `gleam.toml` would allow this code to run
on an earlier version like v1.0.0, resulting in compilation errors!
Hint: Remove the version constraint from your `gleam.toml` or update it to be:

    gleam = ">= 1.1.0"
